Too high clipping range + Auto Depth may send view location to oblivion #71795

Closed
opened 2019-11-23 00:46:05 +01:00 by Stanislav Blinov · 8 comments

Blender Version
Broken: 2.80, 2.81, 2.82 (04272613a7)
Worked: 2.79b

Short description of error
If Auto-Depth preference is enabled, and there's very large clipping range for current view, then panning, rotating or zooming view while having mouse pointer over any geometry may result in view matrix translation component becoming 3 nans.

Exact steps for others to reproduce the error

  1. Load the default scene.
  2. In user preferences, enable Navigation -> Auto Depth
  3. In side bar, View, set clip start to 0.001 and clip end to 100000
  4. Place mouse pointer over the cube
  5. Try panning, rotating or zooming the view

View will end up "nowhere" (can be restored by focusing on selected). region_data.view_matrix will have its translation component a vector of 3 nans.

Granted, extreme clipping ranges should be avoided, but the program should at least react somehow to obviously invalid view matrix. And the behavior seems to be a regression from 2.79b.

**Blender Version** Broken: 2.80, 2.81, 2.82 (04272613a78d) Worked: 2.79b **Short description of error** If Auto-Depth preference is enabled, and there's very large clipping range for current view, then panning, rotating or zooming view while having mouse pointer over any geometry may result in view matrix translation component becoming 3 nans. **Exact steps for others to reproduce the error** 1. Load the default scene. 2. In user preferences, enable Navigation -> Auto Depth 3. In side bar, View, set clip start to 0.001 and clip end to 100000 4. Place mouse pointer over the cube 5. Try panning, rotating or zooming the view View will end up "nowhere" (can be restored by focusing on selected). region_data.view_matrix will have its translation component a vector of 3 nans. Granted, extreme clipping ranges should be avoided, but the program should at least react somehow to obviously invalid view matrix. And the behavior seems to be a regression from 2.79b.

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes

See also https://blenderartists.org/t/the-case-of-the-disappearing-viewport-2-81/1192223 for slightly different behavior (seems not to be affected by Auto Depth).

See also https://blenderartists.org/t/the-case-of-the-disappearing-viewport-2-81/1192223 for slightly different behavior (seems not to be affected by Auto Depth).

Added subscriber: @Kevin-Handy

Added subscriber: @Kevin-Handy

I'm the user with the related issue referenced by @radcapricorn. The fix offered on that thread did indeed work. Updated notes on my issue:

  • Worked on 2.80
  • Failed on 2.81-125257758007 beta through current 2.81 release
  • adjusted ONLY the Clip Start to 1' (a number smaller than suggested), left Clip End at 3281', Frame Selected, viewport works as expected.

It appears that my part of the issue is only related to the Clip Start. My part also did not present itself initially despite the Clip Range being so high. Only after a couple of hours of concept work in the file did the issue present.

I'm the user with the related issue referenced by @radcapricorn. The fix offered on that thread did indeed work. Updated notes on my issue: - Worked on 2.80 - Failed on 2.81-125257758007 beta through current 2.81 release - adjusted ONLY the Clip Start to 1' (a number smaller than suggested), left Clip End at 3281', Frame Selected, viewport works as expected. It appears that my part of the issue is only related to the Clip Start. My part also did not present itself initially despite the Clip Range being so high. Only after a couple of hours of concept work in the file did the issue present.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

In fact there is something wrong there.
Must be some limit with single-precision operations in GPU_matrix_unproject.

In fact there is something wrong there. Must be some limit with single-precision operations in `GPU_matrix_unproject`.

This issue was referenced by 26e4f4a8c4

This issue was referenced by 26e4f4a8c475049e9600d466bb95eed341202f57

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Germano Cavalcante self-assigned this 2019-12-19 15:45:51 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71795
No description provided.