Fix T71795: Unproject with high clipping range sometimes results in nans

Differential Revision: https://developer.blender.org/D6311